
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int HDR_SIZE ;
 int Hdr ;
 scalar_t__ Len ;
 int MSG_ID_SIZE ;
 char* MsgId ;
 int PING_DESCR ;
 int rand () ;
 int random_array (int ,char*) ;
 int set_descr_hdr (int ,char*,int ,int,int,scalar_t__) ;
 int write_buf (int,int ,int ) ;

void
send_ping(int fd){
  char * msg_id;

  random_array(MSG_ID_SIZE, MsgId);
  msg_id = MsgId;
  Len = 0;
  set_descr_hdr(Hdr, msg_id, PING_DESCR, rand() % 256, rand() % 256, Len);
  write_buf(fd, Hdr, HDR_SIZE);
}
