; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_send_ping.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_send_ping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_ID_SIZE = common dso_local global i32 0, align 4
@MsgId = common dso_local global i8* null, align 8
@Len = common dso_local global i64 0, align 8
@Hdr = common dso_local global i32 0, align 4
@PING_DESCR = common dso_local global i32 0, align 4
@HDR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_ping(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @MSG_ID_SIZE, align 4
  %5 = load i8*, i8** @MsgId, align 8
  %6 = call i32 @random_array(i32 %4, i8* %5)
  %7 = load i8*, i8** @MsgId, align 8
  store i8* %7, i8** %3, align 8
  store i64 0, i64* @Len, align 8
  %8 = load i32, i32* @Hdr, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* @PING_DESCR, align 4
  %11 = call i32 (...) @rand()
  %12 = srem i32 %11, 256
  %13 = call i32 (...) @rand()
  %14 = srem i32 %13, 256
  %15 = load i64, i64* @Len, align 8
  %16 = call i32 @set_descr_hdr(i32 %8, i8* %9, i32 %10, i32 %12, i32 %14, i64 %15)
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @Hdr, align 4
  %19 = load i32, i32* @HDR_SIZE, align 4
  %20 = call i32 @write_buf(i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @random_array(i32, i8*) #1

declare dso_local i32 @set_descr_hdr(i32, i8*, i32, i32, i32, i64) #1

declare dso_local i32 @rand(...) #1

declare dso_local i32 @write_buf(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
